--- a/Project_hotel/css/style.css
+++ b/Project_hotel/css/style.css
@@ -34,6 +34,44 @@ p{
     padding: 0 20px;
 }
 
+.text-primary {
+    color: #f7c08a;
+}
+
+.lead {
+    font-size: 20px;
+}
+
+.btn {
+    display: inline-block;
+    font-size: 18px;
+    color: #fff;
+    background: #333;
+    padding: 13px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background: #f7c08a;
+    color: #333;
+}
+
+.bg-dark {
+    background: #333;
+    color: #fff;
+}
+
+.bg-light {
+    background: #f4f4f4;
+    color: #333;
+}
+
+.bg-primary {
+    background:#f7c08a;
+    color:#333 ;
+}
+
 /* NavBar */
 
 #navbar {
@@ -56,7 +94,7 @@ p{
     float: right;
 }
 
-#navbar ul>li {
+#navbar ul li {
     float: left;
 }
 
@@ -66,8 +104,66 @@ p{
     text-align: center;
 }
 
-#navbar ul>li>a:hover,
-#navbar ul>li>a.current {
+#navbar ul li a:hover,
+#navbar ul li a.current {
     background: #444;
     color: #f7c08a;
+}
+
+/* Show case */
+#showcase {
+    background: url('../images/showcase.jpg') no-repeat center center/cover;
+    height: 500px;
+}
+
+#showcase .showcase-content {
+    color: #fff;
+    text-align: center;
+    padding-top: 85px;
+}
+
+#showcase .showcase-content h1 {
+    font-size: 60px;
+    line-height: 1.2em;
+}
+
+#showcase .showcase-content p {
+    padding-bottom: 10px;
+}
+
+/* Home Info */
+#home-info {
+    height: 400px;
+}
+
+#home-info .info-img {
+    float: left;
+    width: 50%;
+    background: url('../images/photo-1.jpg') no-repeat;
+    min-height: 100%;
+}
+
+#home-info .info-content {
+    float: right;
+    width: 50%;
+    height: 100%;
+    text-align: center;
+    padding: 50px 30px;
+    overflow: hidden;
+}
+
+#home-info .info-content p {
+    padding-bottom: 30px;
+}
+
+/* Features */
+.box {
+    float: left;
+    width: 33.3%;
+    padding: 50px;
+    text-align: center;
+}
+
+.box i {
+    margin-bottom: 10px;
 }
