--- a/Project_hotel/css/style.css
+++ b/Project_hotel/css/style.css
@@ -72,6 +72,10 @@ p{
     color:#333 ;
 }
 
+.clr {
+    clear: both;
+}
+
 /* NavBar */
 
 #navbar {
@@ -166,4 +170,13 @@ p{
 
 .box i {
     margin-bottom: 10px;
+}
+
+/* Main Footer */
+#main-footer {
+    text-align: center;
+    background: #444;
+    color: white;
+    padding: 20px; 
+    /* no padding is seen because of float so clear is needed */
 }
