--- a/Project_hotel/css/style.css
+++ b/Project_hotel/css/style.css
@@ -75,6 +75,14 @@ p{
 .clr {
     clear: both;
 }
+/* heading */
+.l-heading{
+    font-size: 40px;
+}
+/* padding */
+.py-1 { padding: 10px 0; }
+.py-2 { padding: 10px 0; }
+.py-3 { padding: 30px 0; }
 
 /* NavBar */
 
@@ -171,6 +179,56 @@ p{
 .box i {
     margin-bottom: 10px;
 }
+
+/*About Info*/
+#about-info .info-left {
+    float: left;
+    width: 50%;
+    min-height: 100%;
+}
+#about-info .info-right{
+    float: right;
+    width: 50%;
+    min-height: 100%;
+}
+
+#about-info .info-right img {
+    display: block;
+    margin: auto;
+    width: 70%;
+    border-radius: 50%;
+}
+
+
+/* testemonial */
+#testimonials {
+    height: 600px;
+    background: url('../images/test-bg.jpg') no-repeat center center/cover;
+    padding-top: 100px;
+}
+
+#testimonials .testimonial{
+    padding: 20px;
+    margin-bottom: 40px;
+    border-radius: 5px;
+    opacity: 0.9;
+
+}
+#testimonials .testimonial img {
+    float: left;
+    width: 100px;
+    margin-right: 20px;
+    border-radius: 50%;
+}
+
+#testimonials h2 {
+    margin-top: 20px;
+    color: white;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+
 
 /* Main Footer */
 #main-footer {
